--- a/gitcom/app/static/templates/admin.html
+++ b/gitcom/app/static/templates/admin.html
@@ -11,8 +11,10 @@
                             <input  type="text" class="form-control" id="user">
                             <button  onclick="getRepo()" type="button" class="btn btn-info">Search</button>
                     </div>
-                <div id="respdisplay">
+                <div>
+                    <ul class="list-group" id="respdisplay">
 
+                    </ul>
                 </div>
             </div>
         </div>
