--- a/gitcom/app/static/style.css
+++ b/gitcom/app/static/style.css
@@ -2,3 +2,31 @@ html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
+.home {
+  margin: 20%;
+}
+
+.home h2{
+  text-align: center;
+  font-size: 200px;
+}
+
+.home i {
+  font-size: 100px;
+}
+
+.elevation-z8{
+  box-shadow: 0 5px 5px -3px rgba(0,0,0,.2), 0 8px 10px 1px rgba(0,0,0,.14), 0 3px 14px 2px rgba(0,0,0,.12);
+}
+
+a{
+  font-weight: bold;
+  font-family: 'Google Sans',Roboto, Arial,sans-serif;
+}
+
+ul a:hover{
+  cursor: pointer;
+  color: #007bff;
+}
