--- a/gitcom/app/static/templates/home.html
+++ b/gitcom/app/static/templates/home.html
@@ -1,8 +1,9 @@
-<div class="container">
-	<div class="row" style="height: 100%;">
-		<div class="col-12" style="max-width: 15%; ">
-			<h5>Welcome</h5>
+<div class="container home">
+	<div class="row">
+		<div class="col-12" style="vertical-align: middle;">
+			<h2><i class="material-icons">
+				language</i>GitCom</h2>
+				<h6 style="text-align: center; margin-top: 30px; font-size: 60px; opacity: .6;">A git wrapper</h6>
 		</div>
 	</div>
-
 </div>
